# ecsify

./: .gitignore  Dockerfile  Makefile  README.md  ROADMAP.md  SYSTEM_DESIGN.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: build.yml  pr.yml  release.yml
ecsify/: __init__.py  __main__.py  cli.py
ecsify/aws/: __init__.py  auth.py  ecs_client.py
ecsify/deployment/: __init__.py  deployer.py  dry_run.py
ecsify/models/: __init__.py  config.py  service.py  task.py
ecsify/parsers/: __init__.py  validator.py  yaml_parser.py
ecsify/utils/: exceptions.py  logger.py  merge.py
examples/: ecsify.prod.yaml  ecsify.yaml
tests/: __init__.py  test_cli.py
tests/unit/models/: test_service.py  test_task.py
